# arbee

./: .env.example  .gitignore  CLAUDE.MD  EVENT_FETCHER_STATUS.md  IMPROVEMENTS.md  api.py  d.md  plan.md  pyproject.toml  requirements.txt
agents/: analyst.py  base.py  copy_trading_agent.py  event_fetcher.py  planner.py  reporter.py
api/: __init__.py  dependencies.py  exceptions.py
api/routes/: __init__.py  discovery.py  health.py  markets.py  traders.py  trades.py  webhooks.py
api/schemas/: __init__.py  providers.py  traders.py  trades.py  webhooks.py
arbee.egg-info/: SOURCES.txt
arbee/agents/: autonomous_analyst.py  autonomous_base.py  autonomous_critic.py  autonomous_planner.py  (+2 more)
backend/: .gitignore  main.py  plan.md  requirements.txt  setup_user.py  test_w.py
betting/: __init__.py  bankroll.py  cache.py  copy_trading.py  portfolio.py  rate_limiter.py  risk.py
clients/: __init__.py  kalshi.py  polymarket.py  polyrouter.py  polyrouter_analysis.py  polyrouter_arbitrage.py  polyrouter_sports.py  valyu.py  wallet_tracker.py
config/: settings.py  system_constants.py
database/: __init__.py  client.py  schema.py  wallet_schema.py
frontend/: ben.md  globals.css  next.config.ts  package-lock.json  package.json
models/: schemas.py
reports/: google-gemini-3-humanity-last-exam-jan-31_autonomous_analysis.json
scripts/: arbitrage_opportunity_scanner.py  batch_wallet_enrichment.py  real_arbitrage_scanner.py  test_diplo_market.py  test_memory_system.py  test_wallet_enrichment.py
tests/: __init__.py  test_complete_flow.py  test_traders.py  test_wallets.py
tools/: __init__.py  bayesian.py  betting.py  copy_trade_signal_tool.py  edge_detection.py  memory.py  polyrouter_tools.py  search.py
utils/: __init__.py  circuit_breaker.py  copy_trading.py  execution.py  market.py  market_data_helper.py  provider_manager.py  token_resolver.py
workflow/: __init__.py  autonomous_graph.py
(+105 files in other folders)
